added Volley library for http requests added sample request

--- a/app/src/main/res/layout/bootstrap_timer.xml
+++ b/app/src/main/res/layout/bootstrap_timer.xml
@@ -47,5 +47,18 @@
         android:visibility="gone"
         style="@style/BootstrapButton"
         />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="fill_parent"
+        style="@style/TimerChronometer"
+        />
+
+    <Button
+        android:id="@+id/submit"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/submit"
+        style="@style/BootstrapButton"
+        />
 
 </LinearLayout>
