--- a/app/src/main/res/layout/bootstrap_timer.xml
+++ b/app/src/main/res/layout/bootstrap_timer.xml
@@ -1,64 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
+<com.gc.materialdesign.views.ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/scroll"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/chronometer"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="00:00:00"
-        style="@style/TimerChronometer"
-        />
+        <TextView
+            android:id="@+id/chronometer"
+            style="@style/TimerChronometer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="00:00:00" />
 
-    <Button
-        android:id="@+id/start"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/start"
-        style="@style/BootstrapButton"
-        />
+        <Button
+            android:id="@+id/start"
+            style="@style/BootstrapButton"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/start" />
 
-    <Button
-        android:id="@+id/stop"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/stop"
-        android:visibility="gone"
-        style="@style/BootstrapButton"
-        />
+        <Button
+            android:id="@+id/stop"
+            style="@style/BootstrapButton"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/stop"
+            android:visibility="gone" />
 
-    <Button
-        android:id="@+id/pause"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/pause"
-        android:visibility="gone"
-        style="@style/BootstrapButton"
-        />
+        <Button
+            android:id="@+id/pause"
+            style="@style/BootstrapButton"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/pause"
+            android:visibility="gone" />
 
-    <Button
-        android:id="@+id/resume"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/resume"
-        android:visibility="gone"
-        style="@style/BootstrapButton"
-        />
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="fill_parent"
-        style="@style/TimerChronometer"
-        />
+        <Button
+            android:id="@+id/resume"
+            style="@style/BootstrapButton"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/resume"
+            android:visibility="gone" />
 
-    <Button
-        android:id="@+id/submit"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/submit"
-        style="@style/BootstrapButton"
-        />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="fill_parent"
+            android:layout_height="200sp"
+            android:textSize="10sp" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/sendPostRequest"
+            style="@style/BootstrapButton"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/submit" />
+
+        <TextView
+            android:id="@+id/secondTextView"
+            android:layout_width="fill_parent"
+            android:layout_height="200sp"
+            android:textSize="10sp" />
+
+        <Button
+            android:id="@+id/sendGetRequest"
+            style="@style/BootstrapButton"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/submit" />
+
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Art des Unfalls wählen:"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/spinner_condition"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown" />
+
+
+        <EditText
+            android:id="@+id/vorname"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@color/white"
+            android:hint="@string/hint_vorname"
+            android:inputType="textPersonName"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="@color/input_login"
+            android:textColorHint="@color/input_login_hint" />
+
+        <EditText
+            android:id="@+id/nachname"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@color/white"
+            android:hint="@string/hint_nachname"
+            android:inputType="textPersonName"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="@color/input_login"
+            android:textColorHint="@color/input_login_hint" />
+
+        <com.gc.materialdesign.views.CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#1E88E5"
+            materialdesign:check="true" />
+
+    </LinearLayout>
+</com.gc.materialdesign.views.ScrollView>
