--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,8 +44,22 @@
     <color name="dark_grey">#1f1f1f</color>
     <color name="navigation_drawer_item_separator">#c2c2c2</color>
 
+    <!-- Theme colors -->
+    <color name="primary">#ff6e40</color>
+    <color name="primary_dark">#ff5722</color>
+    <color name="accent">#ff4081</color>
+    <color name="theme_window_background">#ECECEC</color>
+
+    <!-- general colors for drawer -->
+    <color name="list_background">#F2F2F2</color>
+    <!-- primary colors for drawer -->
+    <color name="list_background_normal">#FCFCFC</color>
+    <!-- secondary colors for drawer -->
+    <color name="list_background_secondary_normal">#F2F2F2</color>
 
 
+    <color name="material_drawer_primary_text">@color/primary</color>
+    <color name="material_drawer_selected_text">@color/primary_dark</color>
     <color name="colorPrimary">#ff18604f</color>
     <color name="colorPrimaryDark">#ff18604f</color>
     <color name="textColorPrimary">#ffffffff</color>
