--- a/app/src/main/res/layout/sketch.xml
+++ b/app/src/main/res/layout/sketch.xml
@@ -2,8 +2,16 @@
     android:id="@+id/sample_main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
+    <ImageView
+        android:id="@+id/street"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/street">
+
+    </ImageView>
     <org.mobi.bluemoon.ui.DragFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/main_layout"
@@ -33,12 +41,14 @@
 
     <ImageButton
         android:id="@+id/rotation_button"
+        style="@style/BootstrapButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/ic_refresh_black_24dp" />
+        android:src="@drawable/ic_refresh_black_24dp"
+        android:padding="5dp" />
 
 
 </RelativeLayout>
