--- a/app/src/main/res/layout/drawing.xml
+++ b/app/src/main/res/layout/drawing.xml
@@ -58,17 +58,10 @@ android:layout_height="match_parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/darker_gray"
-            android:layout_marginBottom="218dp"
-            android:text="@string/agreement"
+            android:layout_marginBottom="50dp"
+            android:text="Skizze"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true" />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test"
-            android:layout_above="@+id/frameLayout"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="56dp" />
 
 
         <me.panavtec.drawableview.DrawableView
