db coupling added to fragments

--- a/app/src/main/res/layout/verletzungen.xml
+++ b/app/src/main/res/layout/verletzungen.xml
@@ -66,14 +66,14 @@
         android:background="#eae2e2">
 
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/verletzteJa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
             android:text="ja" />
 
         <CheckBox
-            android:id="@+id/checkBox2"
+            android:id="@+id/verletzteNein"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
@@ -124,14 +124,14 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <CheckBox
-                android:id="@+id/checkBox3"
+                android:id="@+id/sachschadenJa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
                 android:text="ja" />
 
             <CheckBox
-                android:id="@+id/checkBox4"
+                android:id="@+id/sachschadenNein"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
@@ -171,14 +171,14 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <CheckBox
-                android:id="@+id/checkBox8"
+                android:id="@+id/gegenstaendeJa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
                 android:text="ja" />
 
             <CheckBox
-                android:id="@+id/checkBox9"
+                android:id="@+id/gegenstaendeNein"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
