--- a/app/src/main/res/layout/finish.xml
+++ b/app/src/main/res/layout/finish.xml
@@ -1,22 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="5dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="5dp">
 
-    <Button
-        android:id="@+id/sendEmail"
-        style="@style/BootstrapButton"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/vorschau_text"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Email senden"
+        android:text="Protokoll in Vorschau anzeigen"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/table_text_selector"
+        android:background="#56d3f6"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="10dp" />
+    <Button
+        android:id="@+id/vorschau_btn"
+        style="@style/BootstrapButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Vorschau anzeigen"
         android:layout_gravity="center_horizontal"
         android:padding="5dp"
         android:nestedScrollingEnabled="false"
-        android:layout_marginTop="200dp" />
+        android:layout_marginTop="30dp" />
+    <TextView
+        android:id="@+id/daten_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Protokoll exportieren"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/table_text_selector"
+        android:background="#56d3f6"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="10dp" />
+    <Button
+        android:id="@+id/sendEmail"
+        style="@style/BootstrapButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Emails absenden"
+        android:layout_gravity="center_horizontal"
+        android:padding="5dp"
+        android:nestedScrollingEnabled="false"
+        android:layout_marginTop="30dp" />
     <Button
         android:id="@+id/pdf"
         style="@style/BootstrapButton"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="PDF exportieren"
         android:layout_gravity="center_horizontal"
