--- a/app/src/main/res/layout/sketch.xml
+++ b/app/src/main/res/layout/sketch.xml
@@ -26,6 +26,12 @@
             android:src="@drawable/car1">
 
         </ImageView>
+        <ImageView
+            android:id="@+id/car2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/car2">
+        </ImageView>
 
 
     </org.mobi.bluemoon.ui.DragFrameLayout>
@@ -41,17 +47,6 @@
         android:layout_gravity="center_horizontal"
         android:src="@drawable/ic_refresh_black_24dp"
         android:padding="5dp" />
-
-    <ImageView
-        android:id="@+id/car2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/car2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="76dp">
-
-    </ImageView>
 
 
 </RelativeLayout>
