--- a/app/src/main/res/layout/sketch.xml
+++ b/app/src/main/res/layout/sketch.xml
@@ -12,6 +12,7 @@
         android:src="@drawable/street">
 
     </ImageView>
+
     <org.mobi.bluemoon.ui.DragFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/main_layout"
@@ -36,17 +37,33 @@
 
     </org.mobi.bluemoon.ui.DragFrameLayout>
 
-
-    <ImageButton
-        android:id="@+id/rotation_button"
-        style="@style/BootstrapButton"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/ic_refresh_black_24dp"
-        android:padding="5dp" />
+        android:layout_centerHorizontal="true">
+        <ImageButton
+            android:id="@+id/rotation_button"
+            style="@style/BootstrapButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/reload"
+            android:padding="5dp"/>
+
+        <ImageButton
+            style="@style/BootstrapButton"
+            android:id="@+id/addSymbolBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/plus24"
+            android:padding="5dp"/>
+
+    </LinearLayout>
 
 
 </RelativeLayout>
